git-svn-id: http://chianti.ucsd.edu/svn@20571 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
+++ b/csplugins/trunk/soc/ghuck/LabelPositioningPlugin/plugin/build.xml
@@ -139,7 +139,7 @@
   <!-- =================================================================== -->
   <!-- An alias target for compiling everything and running all tests.     -->
   <!-- =================================================================== -->
-  <target name="all" depends="test">
+  <target name="all" depends="copy_jar">
   </target>
 
   <!-- =================================================================== -->
