BiNGO version 2.40.  Visual Style had been tweaked a bit.
git-svn-id: http://chianti.ucsd.edu/svn@20597 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/kono/BiNGO_UCSD/build.xml
+++ b/csplugins/trunk/ucsd/kono/BiNGO_UCSD/build.xml
@@ -7,14 +7,14 @@
     <tstamp/>
     <property name="name" value="BiNGO"/>
     <property name="plugin.class" value="BiNGO.BiNGOplugin"/>
-    <property name="version" value=""/>
+    <property name="version" value="2.40"/>
 
     <echo message="Building ${name} version ${version} ..."/>
 
     <!-- Inheritable properties -->
     <property name="debug" value="on"/>
-    <property name="optimize" value="off"/>
-    <property name="deprecation" value="off"/>
+    <property name="optimize" value="on"/>
+    <property name="deprecation" value="on"/>
     <property name="fork" value="false"/>
 
     <!-- Define the directories -->
