--- a/csplugins/trunk/ucsd/kono/BiNGO_UCSD/resources/plugin.props
+++ b/csplugins/trunk/ucsd/kono/BiNGO_UCSD/resources/plugin.props
@@ -1,3 +1,5 @@
+# BiNGO Prop file is maintained by Keiichiro Ono since 2.40
+#
 # This props file would be filled out and included in the plugin jar file.  This props file will be used 
 # to put information into the Plugin Manager about the plugin 
 
@@ -11,10 +13,10 @@ pluginName=BiNGO
 pluginDescription=BiNGO is a Cytoscape plugin for functional annotation of gene clusters. It visualises the overrepresentation of Gene Ontology (GO) categories in a set of selected genes.
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
-pluginVersion=2.1
+pluginVersion=2.40
 
 # Compatible Cytoscape version
-cytoscapeVersion=2.5
+cytoscapeVersion=2.7, 2.8
 
 # Category, use one of the categories listed on the website or create your own
 pluginCategory=Functional Enrichment
