--- a/corelibs/trunk/equations/build.xml
+++ b/corelibs/trunk/equations/build.xml
@@ -142,7 +142,7 @@
                  usefile="true" />
       <formatter type="xml" 
                  usefile="true" />
-      <batchtest fork="yes" 
+      <batchtest fork="no" 
                  todir="${log.dir}" 
                  failureProperty="junit.test.failure"
                  errorProperty="junit.test.failure">
