Converted to take advantage of the simplifications that deriving from AbstractFunction makes possible.
git-svn-id: http://chianti.ucsd.edu/svn@20857 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/EquationFunctions/build.xml
+++ b/coreplugins/trunk/EquationFunctions/build.xml
@@ -25,7 +25,7 @@
     <property name="EquationFunctions.root.dir" value="."/>
     <property name="EquationFunctions.lib.dir" value="${EquationFunctions.root.dir}/lib"/>
     
-    <property name="cytoscape.dir" value="../../eqn_attribs"/>
+    <property name="cytoscape.dir" value="../../cytoscape"/>
     <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
     <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins"/>
 
