Updated to relect the state of Cytoscape 2.8.
git-svn-id: http://chianti.ucsd.edu/svn@20859 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/tutorial23/build.xml
+++ b/csplugins/trunk/ucsd/ruschein/tutorial23/build.xml
@@ -25,7 +25,7 @@
     <property name="lib.dir" value="${root.dir}/lib"/>
 
     <!-- Define the Cytoscape directories -->
-    <property name="cytoscape.dir" value="../../../../eqn_attribs"/>
+    <property name="cytoscape.dir" value="../../../../cytoscape"/>
     <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
     <property name="cytoscape.plugin.dir" value="${cytoscape.dir}/plugins"/>
 
