--- a/csplugins/trunk/soc/maital/EnhancedSearch2/plugin.props
+++ b/csplugins/trunk/soc/maital/EnhancedSearch2/plugin.props
@@ -13,10 +13,10 @@ pluginName=EnhancedSearch
 pluginDescription=Perform search on multiple attribute fields using logical operators and wildcards. Locate nodes and edges of interest based on their attributes and highlight them on the network. The simple query syntax is detailed in the URL below.
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
-pluginVersion=1.1
+pluginVersion=1.2
 
 # Compatible Cytoscape version
-cytoscapeVersion=2.5,2.6
+cytoscapeVersion=2.5,2.6,2.7,2.8
 
 # Category, use one of the categories listed on the website or create your own
 pluginCategory=Analysis
@@ -28,7 +28,7 @@ projectURL=http://conklinwolf.ucsf.edu/genmappwiki/Google_Summer_of_Code_2007/Ma
 
 # List of authors.  Note each author and institution pair are separated by a : (colon)
 # each additional author institution pair must be separated from other pairs bye a ; (semicolon)
-pluginAuthorsIntsitutions=Maital Ashkenazi:HUJI
+pluginAuthorsIntsitutions=Maital Ashkenazi:Evogene
 
 # Date this plugin/plugin version was released
-releaseDate=January 1, 2008
+releaseDate=July 20, 2010
