--- a/core3/plugin-api/trunk/pom.xml
+++ b/core3/plugin-api/trunk/pom.xml
@@ -72,6 +72,8 @@
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
+          <finalName>cytoscape-api-${version}</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
         </configuration>
       </plugin>
 
@@ -98,6 +100,7 @@
     </plugins>
   </build>
 
+	<!-- These dependencies are meant to capture the entire public Cytoscape API -->
 	<dependencies>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
@@ -134,6 +137,22 @@
 			<artifactId>layout-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>vizmap-gui-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
