--- a/core3/plugin-api/trunk/pom.xml
+++ b/core3/plugin-api/trunk/pom.xml
@@ -75,6 +75,15 @@
           <finalName>cytoscape-api-${version}</finalName>
           <appendAssemblyId>false</appendAssemblyId>
         </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
