--- a/corelibs/trunk/pom.xml
+++ b/corelibs/trunk/pom.xml
@@ -51,6 +51,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
             <argLine>-Xmx256m</argLine>
+			<redirectTestOutputToFile>true</redirectTestOutputToFile>
           </configuration>
         </plugin>
       </plugins>
