--- a/corelibs/trunk/pom.xml
+++ b/corelibs/trunk/pom.xml
@@ -51,8 +51,43 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
             <argLine>-Xmx256m</argLine>
-			<redirectTestOutputToFile>true</redirectTestOutputToFile>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <encoding>UTF-8</encoding>
+            <locale>en</locale>
+            <javadocVersion>1.5</javadocVersion>
+            <links>
+              <link>http://download.oracle.com/docs/cd/E17476_01/javase/1.5.0/docs/api/</link>
+            </links>
+            <footer>Cytoscape ${corelibs.version} Core Libraries API</footer>
+            <header>Cytoscape ${corelibs.version Core Libraries API</header>
+            <bottom>Copyright 2010 Cytoscape Consortium.  All rights reserved.</bottom>
+          </configuration>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
    </pluginManagement> 
