--- a/csplugins/trunk/ucsd/kono/JRubyEngine/plugin.props
+++ b/csplugins/trunk/ucsd/kono/JRubyEngine/plugin.props
@@ -5,13 +5,13 @@ pluginName=RubyScriptingEngine
 
 # Description used to give users information about the plugin such as what it does.  
 # Html tags are encouraged for formatting purposes.
-pluginDescription=<p>Scripting Engine based on jruby 1.4.0 implementation.  The console is now integrated with BioRuby Shell.</p><p><strong><font color="red">You need to install JRuby 1.4.0 and BioRuby 1.3.1 by yourself.</font></strong>
+pluginDescription=<p>Scripting Engine based on jruby 1.5.1 implementation.  The console is now integrated with BioRuby Shell.</p><p><strong>You need to install JRuby 1.5.1 and BioRuby 1.4.0 by yourself.</strong>
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
-pluginVersion=0.22
+pluginVersion=0.30
 
 # Compatible Cytoscape version
-cytoscapeVersion=2.6, 2.7
+cytoscapeVersion=2.7, 2.8
 
 # Category, use one of the categories listed on the website or create your own
 pluginCategory=Communication/Scripting
