--- a/csplugins/trunk/ucsd/kono/PSIQUICUniversalClient/plugin.props
+++ b/csplugins/trunk/ucsd/kono/PSIQUICUniversalClient/plugin.props
@@ -8,13 +8,13 @@ pluginName=PSICQUICUniversalClient
 
 # Description used to give users information about the plugin such as what it does.  
 # Html tags are encouraged for formatting purposes.
-pluginDescription=PSICQUIC Web Service Universal Client.  You can perform meta-search for <a href="http://code.google.com/p/psicquic/">PSICQUIC data service providers</a>.  This plugin works with Cytoscape 2.7.0 (not released yet) or later.
+pluginDescription=PSICQUIC Web Service Universal Client.  You can perform meta-search in PSICQUIC-compliant databases.  This plugin works with Cytoscape 2.7.0 or later.
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
-pluginVersion=0.08
+pluginVersion=0.25
 
 # Compatible Cytoscape version
-cytoscapeVersion=2.7
+cytoscapeVersion=2.7, 2.8
 
 # Category, use one of the categories listed on the website or create your own
 pluginCategory=Network and Attribute I/O
