--- a/cytoscape/trunk/build.xml
+++ b/cytoscape/trunk/build.xml
@@ -60,7 +60,7 @@
 	     letters, "beta", etc.  to version.num.  
 	     Extra information can, however, be added to version. -->
 	<property name="version.num" value="2.8.0" />
-	<property name="version" value="${version.num}" />
+	<property name="version" value="${version.num}-alpha1" />
 	<property name="dirname.release.dir" value="cytoscape-v${version}" />
 	<property name="java.target_version" value="1.5" />
 
