--- a/cytoscape/trunk/build.xml
+++ b/cytoscape/trunk/build.xml
@@ -271,7 +271,7 @@
 		       target="${java.target_version}"
 		       optimize="on" 
 		       includeAntRuntime="false" 
-		       deprecation="no">
+		       deprecation="yes">
 			<classpath refid="classpath" />
 			<include name="cytoscape/**" />
 			<src path="${src.dir}" />
