git-svn-id: http://chianti.ucsd.edu/svn@21086 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/plugin.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/plugin.props
@@ -1,7 +1,7 @@
 pluginName=DenovoPGNetworkAlignment
 pluginDescription=test
 pluginVersion=1.0
-cytoscapeVersion=2.6,2.7
+cytoscapeVersion=2.6,2.7,2.8
 pluginCategory=Analysis
-pluginAuthorsInstitutions=Johannes Ruscheinski,Kei Ono:UCSD
+pluginAuthorsInstitutions=Johannes Ruscheinski,Kei Ono:UCSD,Gregory Hannum:UCSD
 releaseDate=January 8, 2010
