--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -98,7 +98,7 @@ edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.controller
 edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.interpolator=LinearNumberToColorInterpolator
 edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.type=ContinuousMapping
 edgeColorCalculator.Complex\ Overview\ Style-EdgeWidthMapping.visualPropertyType=EDGE_COLOR
-edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=Module Finder.Interaction Type
+edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controllerType=-1
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic=0,0,204
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=51,51,51
@@ -206,7 +206,7 @@ edgeLineStyleCalculator.InteractionType.mapping.map.pd=SOLID
 edgeLineStyleCalculator.InteractionType.mapping.map.pp=SOLID
 edgeLineStyleCalculator.InteractionType.mapping.type=DiscreteMapping
 edgeLineStyleCalculator.InteractionType.visualPropertyType=EDGE_LINE_STYLE
-edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controller=Module Finder.Interaction Type
+edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.controllerType=-1
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Genetic=LONG_DASH
 edgeLineStyleCalculator.Module\ Style-Edge\ Line\ Style-Discrete\ Mapper.mapping.map.Physical=SOLID
@@ -240,11 +240,11 @@ edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv0.do
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv0.equal=2.0
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv0.greater=2.0
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv0.lesser=2.0
-edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv1.domainvalue=402.8308410644531
+edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv1.domainvalue=60
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv1.equal=20.0
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv1.greater=20.0
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.bv1.lesser=20.0
-edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.controller=Module Finder.edge score
+edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.controller=PanGIA.edge score
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.interpolator=LinearNumberToNumberInterpolator
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.mapping.type=ContinuousMapping
 edgeLineWidthCalculator.Complex\ Overview\ Style-EdgeWidthMapping.visualPropertyType=EDGE_LINE_WIDTH
@@ -257,11 +257,11 @@ edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv0.do
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv0.equal=90.0
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv0.greater=90.0
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv0.lesser=20.0
-edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv1.domainvalue=402.830810546875
+edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv1.domainvalue=60
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv1.equal=255.0
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv1.greater=255.0
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.bv1.lesser=255.0
-edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.controller=Module Finder.edge score
+edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.controller=PanGIA.edge score
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.interpolator=LinearNumberToNumberInterpolator
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.mapping.type=ContinuousMapping
 edgeOpacityCalculator.Complex\ Overview\ Style-EdgeOpacityMapping.visualPropertyType=EDGE_OPACITY
@@ -575,7 +575,7 @@ nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Map
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.equal=30.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.greater=1.0
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.lesser=30.0
-nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.controller=Module Finder.SQRT of member count
+nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.controller=PanGIA.SQRT of member count
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.type=ContinuousMapping
 nodeFontSizeCalculator.Complex\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.visualPropertyType=NODE_FONT_SIZE
@@ -818,7 +818,7 @@ nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper
 nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv2.equal=250.0
 nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv2.greater=1.0
 nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv2.lesser=250.0
-nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.controller=Module Finder.SQRT of member count
+nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.controller=PanGIA.SQRT of member count
 nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
 nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.type=ContinuousMapping
 nodeUniformSizeCalculator.Complex\ Overview\ Style-Node\ Size-Continuous\ Mapper.visualPropertyType=NODE_SIZE
