--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -24,7 +24,6 @@
       </resource>
     </resources>
 
-    <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -42,6 +41,7 @@
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
           </configuration>
         </plugin>
+		<!--
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -77,6 +77,7 @@
             </execution>
           </executions>
         </plugin>
+		-->
         <plugin>
           <groupId>org.jvnet.jaxb2.maven2</groupId>
           <artifactId>maven-jaxb2-plugin</artifactId>
@@ -91,7 +92,23 @@
                   <schemaIncludes>
                     <include>cysession.xsd</include>
                   </schemaIncludes>
-                  <generatePackage>cytoscape.generated </generatePackage>
+                  <generatePackage>cytoscape.generated</generatePackage>
+                  <verbose>true</verbose>
+                  <removeOldOutput>false</removeOldOutput>
+                  <forceRegenerate>true</forceRegenerate>
+                </configuration>
+              </execution>
+              <execution>
+                <id>bookmarks</id>
+                <goals>
+                  <goal>generate</goal>
+                </goals>
+                <configuration>
+                  <schemaDirectory>src/main/resources/xsd</schemaDirectory>
+                  <schemaIncludes>
+                    <include>bookmarks.xsd</include>
+                  </schemaIncludes>
+                  <generatePackage>cytoscape.bookmarks</generatePackage>
                   <verbose>true</verbose>
                   <removeOldOutput>false</removeOldOutput>
                   <forceRegenerate>true</forceRegenerate>
@@ -100,8 +117,24 @@
             </executions>
          </plugin>
       </plugins>
-   </pluginManagement> 
   </build>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Maven 2 Repository</name>
+            <url>http://download.java.net/maven/2
+            </url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>maven-repository.dev.java.net</id>
+            <name>Java.net Maven 1 Repository (legacy)</name>
+            <url>http://download.java.net/maven/1
+            </url>
+            <layout>legacy</layout>
+        </pluginRepository>
+    </pluginRepositories>
+
 
   <dependencies>
     <dependency>
