--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -298,8 +298,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lowagie.text</groupId>
-            <artifactId>com.springsource.com.lowagie.text</artifactId>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
             <version>2.0.8</version>
         </dependency>
 
