--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -334,64 +334,59 @@
         </dependency>
 
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-export</artifactId>
-            <version>2.0.3</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-graphics2d</artifactId>
-            <version>2.0</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-graphicsio</artifactId>
-            <version>2.0</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-graphicsio-emf</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-graphicsio-pdf</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-graphicsio-ps</artifactId>
-            <version>2.0</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-graphicsio-svg</artifactId>
-            <version>2.0</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-graphicsio-swf</artifactId>
-            <version>2.0</version>
+            <groupId>cytoscape-temp</groupId>
+            <artifactId>freehep-graphicsio-java</artifactId>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-io</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-swing</artifactId>
             <version>2.0.2</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-util</artifactId>
-            <version>2.0.1</version>
+            <groupId>cytoscape-temp</groupId>
+            <artifactId>freehep-swing</artifactId>
+            <version>2.0.3</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
+            <artifactId>freehep-util</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-xml</artifactId>
-            <version>2.0.1</version>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>cytoscape-temp</groupId>
+            <artifactId>freehep-jas-plotter</artifactId>
+            <version>2.2</version>
         </dependency>
 
         <dependency>
