fixed max warning message
git-svn-id: http://chianti.ucsd.edu/svn@21114 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <coreplugins.version>2.8.0-SNAPSHOT</coreplugins.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
  
   <modules>
