--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <corelibs.version>2.8.0-SNAPSHOT</corelibs.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
