updated poms with assembly info
git-svn-id: http://chianti.ucsd.edu/svn@21126 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/coreplugins/trunk/EquationFunctions/pom.xml
+++ b/coreplugins/trunk/EquationFunctions/pom.xml
@@ -14,16 +14,26 @@
 
   <name>Equation Functions</name>
 
+  <build>
+    <plugins>
+	  <plugin>
+        <artifactId>maven-assembly-plugin</artifactId> 
+	  </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
       <version>${coreplugins.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>equations</artifactId>
       <version>${coreplugins.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
