--- a/coreplugins/trunk/cPath/pom.xml
+++ b/coreplugins/trunk/cPath/pom.xml
@@ -14,11 +14,20 @@
 
   <name>cPath</name>
 
+  <build>
+    <plugins>
+	  <plugin>
+        <artifactId>maven-assembly-plugin</artifactId> 
+	  </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
       <version>${coreplugins.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
