--- a/coreplugins/trunk/cPath2/pom.xml
+++ b/coreplugins/trunk/cPath2/pom.xml
@@ -19,6 +19,7 @@
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
       <version>${coreplugins.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>cytoscape-temp</groupId>
@@ -45,6 +46,9 @@
 
   <build>
     <plugins>
+	  <plugin>
+        <artifactId>maven-assembly-plugin</artifactId> 
+	  </plugin>
       <plugin>
         <groupId>org.jvnet.jaxb2.maven2</groupId>
         <artifactId>maven-jaxb2-plugin</artifactId>
