--- a/cytoscape/trunk/application/pom.xml
+++ b/cytoscape/trunk/application/pom.xml
@@ -140,6 +140,18 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>batik-maven-plugin</artifactId>
+          <version>1.0-beta-1</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>rasterize</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
   </build>
 
